--- a/index.html
+++ b/index.html
@@ -300,8 +300,10 @@ gradlew bootRun</code></pre>
                     <h2 class="javers-font-color-blue section-heading">Project team</h2>
                     <p class="javers-font-color-blue lead">
                         <ul class="javers-font-color-blue lead">
-                            <li>Bartosz Walacik - owner, commiter - <a href="mailto:bwalacik@gmail.com">bwalacik@gmail.com</a></li>
-                            <li>Paweł Szymczyk - committer - <a href="mailto:pawel.szymczyk90@gmail.com">pawel.szymczyk90@gmail.com</a></li>
+                            <li>Bartosz Walacik - owner, commiter - <a href="mailto:bartek@javers.com">bwalacik@gmail.com</a></li>
+                            <li>Paweł Szymczyk - committer - <a href="mailto:pawel@javers.org">pawel@javers.org</a></li>
+                            <li>Wiola Goździk - committer - <a href="mailto:wiola@javers.org">wiola@javers.org</a></li>
+
                         </ul>
                     </p>
                     </br>
