email set to bartek@javers.com

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
                 <h2 class="javers-font-color-blue">Project team</h2>
                 <ul class="javers-font-color-blue lead">
                     <li>Bartosz Walacik - owner, commiter - <a href="mailto:bartek@javers.com"
-                                                               title="Bartosz Walaciak">bwalacik@gmail.com</a></li>
+                                                               title="Bartosz Walaciak">bartek@javers.com</a></li>
                     <li>Paweł Szymczyk - committer - <a href="mailto:pawel@javers.org" title="Paweł Szymczyk">pawel@javers.org</a></li>
                     <li>Wiola Goździk - committer - <a href="mailto:wiola@javers.org" title="Wiola Goździk">wiola@javers.org</a></li>
                 </ul>
