link to https://github.com/javers/javers/issues/

--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
                     <li>Paweł Szymczyk - committer - <a href="mailto:pawel@javers.org" title="Paweł Szymczyk">pawel@javers.org</a></li>
                     <li>Wiola Goździk - committer - <a href="mailto:wiola@javers.org" title="Wiola Goździk">wiola@javers.org</a></li>
                 </ul>
-                <h4 class="javers-font-color-blue">Former commiters</h4>
-                <ul class="javers-font-color-blue">
-                    <li>Pawel Cierpiatka</li>
-                </ul>
+                <h4 class="javers-font-color-blue">Report an issue</h4>
+                You found a bug or maybe documentation is unclear? Report an issue to our
+                <a href="https://github.com/javers/javers/issues/">github issues</a>.
+
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                 <a class="twitter-timeline" href="https://twitter.com/BartoszWalacik" data-widget-id="469928071974232064">Tweets by
