link to https://github.com/javers/javers/issues/

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
                     <li>Wiola Goździk - committer - <a href="mailto:wiola@javers.org" title="Wiola Goździk">wiola@javers.org</a></li>
                 </ul>
                 <h4 class="javers-font-color-blue">Report an issue</h4>
-                You found a bug or maybe documentation is unclear? Report an issue to our
-                <a href="https://github.com/javers/javers/issues/">github issues</a>.
+                You found a bug? Documentation is unclear?<br/>
+                Report an issue to our <a href="https://github.com/javers/javers/issues/">github issues</a>.
 
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
