up to javers - 0.8.5

--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
         </div>
         <div class="col-lg-4 col-md-4">
             <h3 class="javers-font-color-blue"><i class="fa fa-check-circle "></i>
-                Version 0.8.0 features</h3>
+                Version 0.8.5 features</h3>
             <ul class="javers-font-color-blue">
+                <li>Object Diff</li>
+                <li>Convenient API for selecting changes from Diff</li>
                 <li>Object changes repository</li>
                 <li>Browsing object history, both snapshots and diffs</li>
                 <li>MongoDB support</li>
-                <li>Object diff</li>
             </ul>
         </div>
     </div>
@@ -69,8 +70,9 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
         <div class="col-lg-12">
             <h2 class="javers-font-color-blue section-heading">Features</h2>
 
-            <p class="javers-font-color-blue lead">With JaVers version 0.8.0 you can:</p>
+            <p class="javers-font-color-blue lead">With JaVers version 0.8.5 you can:</p>
             <ul class="javers-font-color-blue lead">
+                <li>Compare complex objects structures using Diff.compare()</li>
                 <li>Commit changes performed on your domain objects graph with single <code>javers.commit()</code> call.</li>
                 <li>Persist objects change history in <code>MongoDB</code></li>
                 <li>Track every change on object fields as well as relations changes.</li>
