site variable to keep current javers version

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
         </div>
         <div class="col-lg-4 col-md-4">
             <h3 class="javers-font-color-blue"><i class="fa fa-check-circle "></i>
-                Version 0.8.6 features</h3>
+                Version {{ site.javers_current_version }} features</h3>
             <ul class="javers-font-color-blue">
                 <li>Object Diff</li>
                 <li>Convenient API for selecting changes from Diff</li>
@@ -70,7 +70,7 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
         <div class="col-lg-12">
             <h2 class="javers-font-color-blue section-heading">Features</h2>
 
-            <p class="javers-font-color-blue lead">With JaVers version 0.8.6 you can:</p>
+            <p class="javers-font-color-blue lead">With JaVers version {{ site.javers_current_version }} you can:</p>
             <ul class="javers-font-color-blue lead">
                 <li>Compare complex objects structures using Diff.compare()</li>
                 <li>Commit changes performed on your domain objects graph with single <code>javers.commit()</code> call.</li>
