mvn artifact url fixing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
 
     <ul class="list-inline">
         <li>
-            <a href="http://mvnrepository.com/artifact/org.javers/javers-core" title="Javers Maven Repository"
+            <a href="http://search.maven.org/#search|ga|1|javers-core" title="Javers Maven Repository"
                class="btn btn-default btn-lg">
                 <i class="fa fa-download fa-fw"></i>&nbsp;<span class="network-name">Maven</span>
             </a>
@@ -36,7 +36,7 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
             <h3 class="javers-font-color-blue"><i class="fa fa-question-circle"></i> What is Javers?</h3>
 
             <p class="javers-font-color-blue">
-                JaVers is a lightweight java library for auditing changes in
+                JaVers is a lightweight, open source java library for auditing changes in
                 your object-oriented data.
                 We all use Version Control Systems for source code,
                 why not to use specialized tool to track changes done on domain objects by our users?
@@ -48,7 +48,7 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
             <p class="javers-font-color-blue">
                 It's lightweight and versatile
                 <br> Configuration is easy
-                <br> It's open for extensions and contributions
+                <br> We are open for extensions and contributions
             </p>
         </div>
         <div class="col-lg-4 col-md-4">
@@ -196,7 +196,6 @@ title: JaVers - Lightweight Java Objects Auditing And Diff Framework
                     <li>Wiola Goździk - committer - <a href="mailto:wiola@javers.org" title="Wiola Goździk">wiola@javers.org</a></li>
                 </ul>
                 <h4 class="javers-font-color-blue">Report an issue</h4>
-                You found a bug? Documentation is unclear?<br/>
                 Report an issue to our <a href="https://github.com/javers/javers/issues/">github issues</a>.
 
             </div>
