--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 ---
 layout: main
 title: JaVers - Lightweight Java Objects Auditing And Diff Framework
-descritpion: Javers desription
+descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
 ---
 <header class="container-fluid hero-container">
     <div class="hero">
-        <h1><strong>JaVers</strong> is a lightweight Java library <br/>for versioning domain objects</h1>
+        <h1 style="color:#EA4D1A;">Objects auditing and diff framework</h1>
 
-        <p>We all want to be prepared for the audit.</p>
+        <p>Using <strong>JaVers</strong> you can forget about the troublesome data versioning</p>
 
-        <p>Using <strong>JaVers</strong> you can forget about the troublesome data versioning.</p>
-
-        <p>Let the changes in your data be managed by JaVers.</p>
+        <p>Let the changes in your data be managed by JaVers</p>
 
         <div class="repositories visible-lg">
-            <a href="#" class="maven">
-                <small>get from</small>
+            <a href="http://search.maven.org/#search|ga|1|javers-core" class="maven">
                 maven
+                <small>central</small>
                 <img src="img/maven_logo.png"/>
             </a>
-            <span>or</span>
-            <a href="#" class="github">
-                <small>clone from</small>
+            &nbsp;&nbsp;
+            <a href="https://github.com/javers/javers" class="github">
                 github
+                <small>repository</small>
                 <img src="img/github_logo.png"/>
             </a>
         </div>
@@ -38,7 +36,7 @@ descritpion: Javers desription
             <span>
                 <img src="img/icon_paper_plane.svg" alt="lightweight and versatile"/>
             </span>
-            <h4>lightweight<br/>and versatile</h4>
+            <h4>lightweight<br/>and versatile<br/>Java lib</h4>
         </div>
         <div class="col-xs-4 col-md-4">
             <span>
@@ -149,6 +147,7 @@ descritpion: Javers desription
             <div class="col-md-4">
                 <br/>
                 <a class="twitter-timeline" href="https://twitter.com/BartoszWalacik"
+                   data-tweet-limit="5"
                    data-widget-id="469928071974232064">Tweets by
                     @BartoszWalacik</a>
             </div>
