--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@ descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
                              src="http://www.gravatar.com/avatar/09d370c8f5e6c5caf365a31f1f2128fc" class="profile-img"/>
                         <strong>Bartosz Walacik</strong>&nbsp;
                         <small>owner</small>
-                        <a href="mailto:bartek@javers.com" title="Bartosz Walaciak">bartek@javers.com</a>
+                        <a href="https://twitter.com/BartoszWalacik" title="Bartosz Walaciak">@BartoszWalacik</a>
                     </li>
                     <li>
                         <img alt="Paweł Szymczyk Gravatar"
                              src="http://www.gravatar.com/avatar/c81d83fdbe3a8ea5f5fef874a2272094" class="profile-img"/>
                         <strong>Paweł Szymczyk</strong>&nbsp;
                         <small>committer</small>
-                        <a href="mailto:pawel@javers.org" title="Paweł Szymczyk">pawel@javers.org</a>
+                        <a href="https://twitter.com/pawelszymczyk">@pawelszymczyk</a>
                     </li>
                     <li>
                         <img alt="Wioleta Goździk Gravatar"
