--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
             <span>
                 <img src="img/icon_paper_plane.svg" alt="lightweight and versatile"/>
             </span>
-            <h4>lightweight<br/>and versatile<br/>Java lib</h4>
+            <h4>lightweight<br/>and versatile java lib</h4>
         </div>
         <div class="col-xs-4 col-md-4">
             <span>
@@ -101,7 +101,7 @@ descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
         <div class="row">
             <div class="col-md-4">
                 <h2>Release plan</h2>
-                <ul>
+                <ul id="releases">
                     <li>v1.0 - production-ready release with stable API</li>
                     <li>v1.1 &nbsp;- <strong>PostgreSQL</strong>, <strong>MySql</strong> and <strong>H2</strong> support
                     </li>
@@ -141,13 +141,15 @@ descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
                              src="http://www.gravatar.com/avatar/cb50c20f3cf5ff15832969b9f646438b" class="profile-img"/>
                         <strong>Bartosz Gałek</strong>&nbsp;
                         <small>committer</small>
+                        <a href="https://twitter.com/bartoszgalek" title="Bartosz Gałek">@bartoszgalek</a>
                     </li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <br/>
                 <a class="twitter-timeline" href="https://twitter.com/BartoszWalacik"
-                   data-tweet-limit="5"
+                   data-tweet-limit="3"
+                   data-link-color="#ea4d1a"
                    data-widget-id="469928071974232064">Tweets by
                     @BartoszWalacik</a>
             </div>
