--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
             <div id="features" class="col-md-6">
                 <h2>Features</h2>
 
-                <h3>With version 1.0.0-RC3 you can:</h3>
+                <h3>With version {{site.javers_current_version}} you can:</h3>
                 <ul>
                     <li><p>Compare complex objects structures using Diff.compare()</p></li>
                     <li><p>Commit changes performed on your domain objects graph with single
