repositories hidden-xs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
 
         <p>Let the changes in your data be managed by JaVers</p>
 
-        <div class="repositories visible-lg">
+        <div class="repositories hidden-xs">
             <a href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar" class="maven">
                 maven
                 <small>central</small>
