--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
                     </li>
                     <li>v1.2 - Oracle support</li>
                 </ul>
-                <h2>Report an issue</h2>
 
-                <p>Found a bug? Documentation is unclear?<br/>Report an issue on our <a
-                        href="https://github.com/javers/javers/issues/">github issues</a>.</p>
+                <h2>Report an issue</h2>
+                <p>Found a bug? Documentation is unclear?<br/>
+                    <a href="https://github.com/javers/javers/issues/">Report an issue</a></p>
             </div>
             <div id="team" class="col-md-4">
                 <h2>Project team</h2>
