--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: main
-title: JaVers - Lightweight Java Objects Auditing And Diff Framework
-descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
+title: JaVers — Lightweight Java Objects Auditing And Diff Framework
+descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
 ---
 <header class="container-fluid hero-container">
     <div class="hero">
@@ -103,10 +103,10 @@ descritpion: JaVers - Lightweight Java Objects Auditing And Diff Framework
             <div class="col-md-4">
                 <h2>Release plan</h2>
                 <ul id="releases">
-                    <li>v1.0 - production-ready release with stable API</li>
-                    <li>v1.1 &nbsp;- <strong>PostgreSQL</strong>, <strong>MySql</strong> and <strong>H2</strong> support
+                    <li>v1.0 — production-ready release with stable API</li>
+                    <li>v1.1 &nbsp; — <strong>PostgreSQL</strong>, <strong>MySql</strong> and <strong>H2</strong> support
                     </li>
-                    <li>v1.2 - Oracle support</li>
+                    <li>v1.2 — Oracle support</li>
                 </ul>
 
                 <h2>Report an issue</h2>
