--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@ descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
             <div class="col-md-4">
                 <h2>Release plan</h2>
                 <ul id="releases">
-                    <li>v1.0 — production-ready release with stable API</li>
-                    <li>v1.1 &nbsp; — <strong>PostgreSQL</strong>, <strong>MySql</strong> and <strong>H2</strong> support
-                    </li>
-                    <li>v1.2 — Oracle support</li>
+                    <li><strong>v. 1.0</strong> — production-ready release with stable API</li>
+                    <li>v. 1.1 &nbsp; — PostgreSQL, MySql and H2 support</li>
+                    <li>v. 1.2 — Oracle support</li>
+                    <li>see <a href="documentation/features/#release-notes">release notes</a>
                 </ul>
 
                 <h2>Report an issue</h2>
